完成自动设置桌面壁纸功能

--- a/BingApplication/BingApplication.csproj
+++ b/BingApplication/BingApplication.csproj
@@ -62,6 +62,7 @@
     <Compile Include="SetupWindow.xaml.cs">
       <DependentUpon>SetupWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WallpaperUtils.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
