--- a/BingApplication/BingApplication.csproj
+++ b/BingApplication/BingApplication.csproj
@@ -62,6 +62,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BindDataProvider.cs" />
     <Compile Include="ComboInterval.cs" />
     <Compile Include="ConfigUtils.cs" />
     <Compile Include="SetupWindow.xaml.cs">
