--- a/BingApplication/BingApplication.csproj
+++ b/BingApplication/BingApplication.csproj
@@ -57,10 +57,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
+    <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </ApplicationDefinition>
+    </Page>
     <Compile Include="ComboInterval.cs" />
     <Compile Include="ConfigUtils.cs" />
     <Compile Include="InverseBooleanConverter.cs" />
